--- a/程序员的自我修养/第3章/程序员的自我修养-第3章目标文件里有什么.md
+++ b/程序员的自我修养/第3章/程序员的自我修养-第3章目标文件里有什么.md
@@ -6,9 +6,8 @@ pc平台可执行文件格式:
 
 windows: PE(Portable Executable)
 LINUX: ELF(Executable Linkale Format)
-    
-    都是COFF(Common File Format)的变种
 
+    都是COFF(Common File Format)的变种
 
 目标文件格式:
 
@@ -22,17 +21,13 @@ LINUX: .o
 | 共享目标文件<br>(Shared Object File) | 这类文件包含了代码和数据，可以<br>在一下两种情况使用，一种是连接器可以使用<br>这种文件跟其他的可重定位文件和共享目<br>标文件链接，产生新的目标文件。第二种<br>是动态链接器可以降几个这种共享目标文件与可只执行文件结合，作为进程映像的一<br>部分来运行 | Linux的.so<br>Windows的.DLL |
 | 核心转储文件<br>(Core Dump File) | 当进程意外终止时，系统可以将该进程的地址<br>空间的内容及终时的一些其他信息转储到核心转储文件 | Linux的 core dump |
 
-
     LINUX下 file 指令查看格式
 
-
-## 3.2 目标文件是什么样的
+## 3.2 目标文件是什么样的
 
 ![程序与目标文件](图3-1.jpg "程序与目标文件")
 
     C语言编译后，执行语句保存在.text段中，已初始化的全局变量和局部静态变量保存在.data段中。未初始化的全局变量和局部静态变量保存在.bss段中
-
-
 
 ## 3.3 挖掘SimpleSection.o
 
