--- a/程序员的自我修养/第6章/程序员的自我修养-第6章可执行文件的装载与进程.md
+++ b/程序员的自我修养/第6章/程序员的自我修养-第6章可执行文件的装载与进程.md
@@ -1,6 +1,5 @@
 # 6. 可执行文件的装载与进程 
 
-
 ## 6.1 进程的虚拟地址空间
 
 每个程序运行起来之后，都会拥有独立的虚拟地址空间(Virtual Address Space)，由cpu的位数决定。
@@ -16,14 +15,13 @@ linux 进程虚拟空间分布：
 
 就是剩下的3GB也不能全部给进程使用，还有其他用途。
 
-
 ### PAE
 
 32位CPU，使用内存空间能否超过4GB？如果“空间”指的是虚拟地址空间，那么不能。如果“空间”指的是内存空间，那么可以。
 
 Intel自1995年 Pentium Pro CPU开始采用36位的物理地址，也就是可以访问高达64GB的物理内存。扩展为36位地址线之后，Intel修改了页映射方式，这个地址扩展叫PAE(Physical Address Extension)
 
-对于扩展的空间，普通应用程序无法感知其存在，这是操作系统的事。如应用程序中0x10000000~0x20000000这段256MB的虚拟地址空间来做窗口，程序可以在高于4GB的物理空间申请多个大小为256的物理空间，编号A，B，C等。当用到A时，将0x10000000~0x20000000映射到A，用到B，C时，再映射过去。windows下，这叫做AWE(Adress Windowing Extensions)；Linux下采用mmap()系统调用来实现。
+对于扩展的空间，普通应用程序无法感知其存在，这是操作系统的事。如应用程序中0x10000000\~0x20000000这段256MB的虚拟地址空间来做窗口，程序可以在高于4GB的物理空间申请多个大小为256的物理空间，编号A，B，C等。当用到A时，将0x10000000\~0x20000000映射到A，用到B，C时，再映射过去。windows下，这叫做AWE(Adress Windowing Extensions)；Linux下采用mmap()系统调用来实现。
 
 
 ## 6.2 装载方式
