--- a/程序员的自我修养/第3章/程序员的自我修养-第3章目标文件里有什么.md
+++ b/程序员的自我修养/第3章/程序员的自我修养-第3章目标文件里有什么.md
@@ -25,7 +25,7 @@ LINUX: .o
 
 ## 3.2 目标文件是什么样的
 
-![程序与目标文件](https://github.com/wjbwsb/readNote/raw/master/%E7%A8%8B%E5%BA%8F%E5%91%98%E7%9A%84%E8%87%AA%E6%88%91%E4%BF%AE%E5%85%BB/%E7%AC%AC3%E7%AB%A0/%E5%9B%BE3-1.jpg "程序与目标文件")
+![程序与目标文件](图3-1.jpg "程序与目标文件")
 
     C语言编译后，执行语句保存在.text段中，已初始化的全局变量和局部静态变量保存在.data段中。未初始化的全局变量和局部静态变量保存在.bss段中
 
